# aReceitas-flask

./: .env.dev  .gitignore  pyproject.toml  readme.MD  run.py
core/: app.py  auth.py
core/db/schemas/: initial_schema.sql
core/models/: receita.py  recipe.py  user.py  usuario.py
core/routes/: receitas.py  recipe_routes.py  user_routes.py
core/schemas/: initial_schema.sql
